--- a/Facebook.html
+++ b/Facebook.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h1>FACEBOOK</h1>
+        <p>This is a facebook page</p>
+        <p>New</p>
         <script type="text/javascript" src="Facebook.js"></script>
     </body>
 </html>
